Módulo de chat en js (cliente) y esquema de estilos css

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -9,4 +9,32 @@
 		  color: white;
 }
 
+.msgAuthor{
+
+}
+
+.msgContent{
+
+}
+
+.chatMsg{
+
+}
+
+/*TODO: añadir más atributos a los colores*/
+.chatMsg.red{
+		  color: red;
+}
+
+.chatMsg.green{
+		  color: red;
+}
+
+.chatMsg.blue{
+		  color: red;
+}
+
+.chatMsg.orange{
+		  color: red;
+}
 
